--- a/instagram/styles.css
+++ b/instagram/styles.css
@@ -1,1 +1,34 @@
-/* Add your CSS here */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.button {
+  border: none;
+  color: rgb(27, 27, 27);
+  padding: 10px 5px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 14px;
+  cursor: pointer;
+  position: relative;
+  width: 80px;
+  margin-left: 2px;
+  display: flex;
+  float: left;
+  margin-top: 5px;
+}
+div {
+  width: 10px;
+  margin: 10px;
+}
+h1, h2, h3, .above {
+  overflow: hidden;
+  margin-top: 0;
+  margin-bottom: 3%;
+  margin-left: 250px;
+  padding-top: -150px;
+}
+a {
+  text-decoration: none;
+}
