--- a/stevens-college/styles.css
+++ b/stevens-college/styles.css
@@ -1,1 +1,29 @@
-/* Add your CSS here */
+h1 {
+  text-align: center;
+}
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+.button {
+  background-color: rgb(177, 2, 2);
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 20px;
+  margin: 4px 2px;
+  cursor: pointer;
+  position: relative;
+  width: 80px;
+  margin-left: 20px;
+  display: inline-block;
+  margin-top: 30px;
+}
+div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
