--- a/instagram/styles.css
+++ b/instagram/styles.css
@@ -22,13 +22,50 @@ div {
   width: 10px;
   margin: 10px;
 }
-h1, h2, h3, .above {
-  overflow: hidden;
-  margin-top: 0;
-  margin-bottom: 3%;
-  margin-left: 250px;
-  padding-top: -150px;
+.about{
+  margin-top: 10px;
+  margin-bottom: 100px;
+  margin-left: 80px;
+  padding-top: 1px;
+  float: left;
 }
 a {
   text-decoration: none;
+}
+.sidebar{
+display: flex;
+width: 150px;
+flex-direction: column;
+ padding-right: 15px;
+}
+.about{
+display: flex;
+flex-direction: column;
+justify-content: flex-end;
+width: 530px;
+}
+.page-container{
+display: flex;
+flex-direction: row;
+width: 140px;
+justify-content: flex-start;
+}
+.page{
+  width: 1000px;
+  display: flex;
+  flex-direction: row;
+}
+.button:hover{
+ border-left:  5px;
+  border-color: black;
+  border-style: solid;
+  border-right: 0px;
+  border-top: 0px;
+  border-bottom: 0px;
+}
+.above {
+  padding-top: 15px;
+}
+h1, h2, h3 {
+  padding-top: 15px;
 }
