--- a/amazon/styles.css
+++ b/amazon/styles.css
@@ -1,1 +1,31 @@
-/* Add your CSS here */
+html {
+  width: 880px;
+}
+h1 {
+  color: rgb(255, 123, 0)
+}
+img {
+  width: 125px;
+  height: 175px;
+  float: left;
+  padding-left: 20px;
+  text-align:center;
+  display:block;
+  border: 1px solid transparent;
+  margin-left: 25px;
+  padding-bottom: 10px;
+  margin-right: 40px;
+}
+div.item {
+  vertical-align: bottom;
+  display: inline-block;
+  text-align: center;
+}
+.under {
+  display: block;
+  font-size: 14px;
+  padding-bottom: 40px;
+}
+.under a {
+  text-decoration: none;
+}
