--- a/instagram/styles.css
+++ b/instagram/styles.css
@@ -22,9 +22,9 @@ div {
   width: 10px;
   margin: 10px;
 }
-.about{
-  margin-top: 10px;
-  margin-bottom: 100px;
+.about {
+  margin-top: 2px;
+  margin-bottom: 90px;
   margin-left: 80px;
   padding-top: 1px;
   float: left;
@@ -32,36 +32,37 @@ div {
 a {
   text-decoration: none;
 }
-.sidebar{
+.sidebar {
 display: flex;
 width: 150px;
 flex-direction: column;
- padding-right: 15px;
+ padding-right: 5px;
 }
-.about{
+.about {
 display: flex;
 flex-direction: column;
 justify-content: flex-end;
-width: 530px;
+width: 450px;
 }
-.page-container{
+.page-container {
 display: flex;
 flex-direction: row;
 width: 140px;
 justify-content: flex-start;
 }
-.page{
+.page {
   width: 1000px;
   display: flex;
   flex-direction: row;
 }
-.button:hover{
- border-left:  5px;
-  border-color: black;
+.button:hover {
+  border-left:  2px;
+  border-color: rgb(39, 39, 39);
   border-style: solid;
   border-right: 0px;
   border-top: 0px;
   border-bottom: 0px;
+  padding-left: 22px;
 }
 .above {
   padding-top: 15px;
