--- a/instagram/styles.css
+++ b/instagram/styles.css
@@ -33,22 +33,22 @@ a {
   text-decoration: none;
 }
 .sidebar {
-display: flex;
-width: 150px;
-flex-direction: column;
- padding-right: 5px;
+  display: flex;
+  width: 150px;
+  flex-direction: column;
+  padding-right: 5px;
 }
 .about {
-display: flex;
-flex-direction: column;
-justify-content: flex-end;
-width: 450px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  width: 450px;
 }
 .page-container {
-display: flex;
-flex-direction: row;
-width: 140px;
-justify-content: flex-start;
+  display: flex;
+  flex-direction: row;
+  width: 140px;
+  justify-content: flex-start;
 }
 .page {
   width: 1000px;
@@ -69,4 +69,9 @@ justify-content: flex-start;
 }
 h1, h2, h3 {
   padding-top: 15px;
+}
+.caps {
+  text-transform: uppercase;
+  color: gray;
+  font-size: 14px;
 }
