--- a/stevens-college/styles.css
+++ b/stevens-college/styles.css
@@ -7,20 +7,23 @@ img {
   margin-right: auto;
 }
 .button {
-  background-color: rgb(177, 2, 2);
+  background-color: rgb(192, 3, 3);
   border: none;
   color: white;
-  padding: 10px 20px;
+  padding: 20px 20px;
   text-align: center;
   text-decoration: none;
-  font-size: 20px;
+  font-size: 18px;
   margin: 4px 2px;
   cursor: pointer;
   position: relative;
-  width: 80px;
-  margin-left: 20px;
+  width: 90px;
+  margin-left: 15px;
   display: inline-block;
   margin-top: 30px;
+  text-transform: uppercase;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 div {
   display: flex;
